TSF-177: støttei modellen for flere avslagsårsaker per behandling